deploy: QuantumPL/site@3cbf9517600116d066d3d582b634cfdbbc510b66

--- a/publication-type/0/index.html
+++ b/publication-type/0/index.html
@@ -134,6 +134,12 @@ Variational Quantum Algorithms are hybrid classical-quantum algorithms where cla
 </div>
 </div>
 <div>
+<h2><a href=/bib/publication/Unruh2021/>Quantum and classical registers</a></h2>
+<div class=article-style>
+We present a generic theory of \"registers\" in imperative programs and instantiate it in the classical and quantum setting. Roughly speaking, a register is some mutable part of the program state. Mutable classical variables and quantum registers and …
+</div>
+</div>
+<div>
 <h2><a href=/bib/publication/Lewis2021/>Formal Verification of Quantum Programs: Theory, Tools and Challenges</a></h2>
 <div class=article-style>
 Over the past 27 years, quantum computing has seen a huge rise in interest from both academia and industry. At the current rate, quantum computers are growing in size rapidly backed up by the increase of research in the field. Significant efforts are …
@@ -149,6 +155,12 @@ While recent progress in quantum hardware open the door for significant speedup 
 <h2><a href=/bib/publication/Cross2021/>OpenQASM 3: A broader and deeper quantum assembly language</a></h2>
 <div class=article-style>
 Quantum assembly languages are machine-independent languages that traditionally describe quantum computation in the circuit model. Open quantum assembly language (OpenQASM 2) was proposed as an imperative programming language for quantum circuits …
+</div>
+</div>
+<div>
+<h2><a href=/bib/publication/Echenim2021/>Quantum projective measurements and the CHSH inequality in Isabelle/HOL</a></h2>
+<div class=article-style>
+We present a formalization in Isabelle/HOL of quantum projective measurements, a class of measurements involving orthogonal projectors that is frequently used in quantum computing. We also formalize the CHSH inequality, a result that holds on …
 </div>
 </div>
 <div>
@@ -173,12 +185,6 @@ This paper presents an equational theory for the QRAM model of quantum computati
 <h2><a href=/bib/publication/Hietala2019/>Verified Optimization in a Quantum Intermediate Representation</a></h2>
 <div class=article-style>
 We present sqire, a low-level language for quantum computing and verification. sqire uses a global register of quantum bits, allowing easy compilation to and from existing 'quantum assembly' languages and simplifying the verification process. We …
-</div>
-</div>
-<div>
-<h2><a href=/bib/publication/Liu2019a/>Quantum Hoare Logic</a></h2>
-<div class=article-style>
-QHLProver-AFP, formal proof development in Isabelle, supplement to [Liu2019]
 </div>
 </div>
 <div>
