--- a/publication/Liu2019/index.html
+++ b/publication/Liu2019/index.html
@@ -176,7 +176,7 @@ Conference paper
 </div>
 <div class="d-md-none space-below"></div>
 <div class=space-below></div>
-<div class=article-style><p>See also: Isabelle AFP entry, QHLProver [<a href=../Liu2019a>Liu2019a</a>]</p>
+<div class=article-style><p>See also: Isabelle AFP entry [<a href=../Liu2019a>Liu2019a</a>]</p>
 </div>
 <div class=article-tags>
 <a class="badge badge-light" href=/bib/tag/hoare-logic/>hoare logic</a>
