--- a/publication/index.html
+++ b/publication/index.html
@@ -470,6 +470,36 @@ arXiv
 <div class="media stream-item">
 <div class=media-body>
 <div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Unruh2021/>Quantum and classical registers</a>
+</div>
+<a href=/bib/publication/Unruh2021/ class=summary-link>
+<div class=article-style>
+We present a generic theory of "registers" in imperative programs and instantiate it in the classical and quantum setting. …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Dominique-Unruh/>Dominique Unruh</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Unruh2021/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2105.10914 target=_blank rel=noopener>
+arXiv
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-0 year-2021">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
 <a href=/bib/publication/Dandy2021/>Qimaera: Type-safe (Variational) Quantum Programming in Idris</a>
 </div>
 <a href=/bib/publication/Dandy2021/ class=summary-link>
@@ -560,6 +590,36 @@ Cite
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1016/j.tcs.2021.10.025 target=_blank rel=noopener>
 DOI
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-9 year-2021">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Unruh2021a/>Quantum and Classical Registers</a>
+</div>
+<a href=/bib/publication/Unruh2021a/ class=summary-link>
+<div class=article-style>
+A formalization of the theory of quantum and classical registers as developed by (Unruh, Quantum and Classical Registers). In a …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Dominique-Unruh/>Dominique Unruh</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Unruh2021a/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://isa-afp.org/entries/Registers.html target=_blank rel=noopener>
+URL
 </a>
 </div>
 </div>
@@ -1151,6 +1211,67 @@ URL
 </div>
 </div>
 </div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-0 year-2021">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Echenim2021/>Quantum projective measurements and the CHSH inequality in Isabelle/HOL</a>
+</div>
+<a href=/bib/publication/Echenim2021/ class=summary-link>
+<div class=article-style>
+We present a formalization in Isabelle/HOL of quantum projective measurements, a class of measurements involving orthogonal projectors …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Mnacho-Echenim/>Mnacho Echenim</a></span>, <span>
+<a href=/bib/author/Mehdi-Mhalla/>Mehdi Mhalla</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Echenim2021/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2103.08535 target=_blank rel=noopener>
+arXiv
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-9 year-2021">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Echenim2021a/>Quantum projective measurements and the CHSH inequality</a>
+</div>
+<a href=/bib/publication/Echenim2021a/ class=summary-link>
+<div class=article-style>
+This work contains a formalization of quantum projective measurements, also known as von Neumann measurements, which are based on …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Mnacho-Echenim/>Mnacho Echenim</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Echenim2021a/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://isa-afp.org/entries/Projective_Measurements.html target=_blank rel=noopener>
+URL
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
 <div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2021">
 <div class="media stream-item">
 <div class=media-body>
@@ -1461,6 +1582,38 @@ Cite
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/3428218 target=_blank rel=noopener>
 DOI
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-9 year-2020">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Bordg2020/>Isabelle Marries Dirac: a Library for Quantum Computation and Quantum Information</a>
+</div>
+<a href=/bib/publication/Bordg2020/ class=summary-link>
+<div class=article-style>
+This work is an effort to formalise some quantum algorithms and results in quantum information theory. Formal methods being critical …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Anthony-Bordg/>Anthony Bordg</a></span>, <span>
+<a href=/bib/author/Hanna-Lachnitt/>Hanna Lachnitt</a></span>, <span>
+<a href=/bib/author/Yijun-He/>Yijun He</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Bordg2020/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://isa-afp.org/entries/Isabelle_Marries_Dirac.html target=_blank rel=noopener>
+URL
 </a>
 </div>
 </div>
@@ -2133,7 +2286,7 @@ URL
 </div>
 </div>
 </div>
-<div class="grid-sizer col-lg-12 isotope-item pubtype-0 year-2019">
+<div class="grid-sizer col-lg-12 isotope-item pubtype-9 year-2019">
 <div class="media stream-item">
 <div class=media-body>
 <div class="section-subheading article-title mb-0 mt-0">
@@ -2141,7 +2294,7 @@ URL
 </div>
 <a href=/bib/publication/Liu2019a/ class=summary-link>
 <div class=article-style>
-QHLProver-AFP, formal proof development in Isabelle, supplement to [Liu2019]
+We formalize quantum Hoare logic [TOPLAS 33(6),19]. In particular, we specify the syntax and denotational semantics of a simple model …
 </div>
 </a>
 <div class="stream-meta article-metadata">
