--- a/publication/Bordg2021/index.html
+++ b/publication/Bordg2021/index.html
@@ -174,7 +174,8 @@ Journal article
 </div>
 <div class="d-md-none space-below"></div>
 <div class=space-below></div>
-<div class=article-style></div>
+<div class=article-style><p>See also: Isabelle AFP entry [<a href=../Bordg2020>Bordg2020</a>]</p>
+</div>
 <div class=article-tags>
 <a class="badge badge-light" href=/bib/tag/isabelle/hol/>isabelle/hol</a>
 <a class="badge badge-light" href=/bib/tag/certification/>certification</a>
