deploy: QuantumPL/site@ebdb43eaa9a91954dfde5eff19c9cdd527f949be

--- a/404.html
+++ b/404.html
@@ -123,16 +123,16 @@
 <p>Perhaps you were looking for one of these?</p>
 <h2>Latest</h2>
 <ul>
+<li><a href=/bib/event/>Recent & Upcoming Events</a></li>
+<li><a href=/bib/event/pldi22-sigplan/>Quantum at the SIGPLAN Track at PLDI 2022</a></li>
+<li><a href=/bib/event/pldi22/>Quantum at PLDI 2022</a></li>
 <li><a href=/bib/publication/Xu2022/>Quartz: Superoptimization of Quantum Circuits</a></li>
 <li><a href=/bib/publication/>Publications</a></li>
 <li><a href=/bib/publication/Tao2022/>Giallar: Push-button Verification for the Qiskit Quantum Compiler</a></li>
 <li><a href=/bib/publication/Peng2022/>Algebraic Reasoning of Quantum Programs via Non-Idempotent Kleene Algebra</a></li>
+<li><a href=/bib/publication/Peng2022a/>A Formally Certified End-to-End Implementation of Shor's Factorization Algorithm</a></li>
 <li><a href=/bib/publication/Ittah2022/>QIRO: A Static Single Assignment-Based Quantum Program Representation for Optimization</a></li>
 <li><a href=/bib/publication/Colledan2022/>On Dynamic Lifting and Effect Typing in Circuit Description Languages (Extended Version)</a></li>
-<li><a href=/bib/event/>Recent & Upcoming Events</a></li>
-<li><a href=/bib/event/popl22/>Quantum at POPL 2022</a></li>
-<li><a href=/bib/publication/Yuan2022/>Twist: Sound Reasoning for Purity and Entanglement in Quantum Programs</a></li>
-<li><a href=/bib/publication/Jia2022/>Semantics for Variational Quantum Programming</a></li>
 </ul>
 </div>
 </div>
