--- a/event/popl22/index.html
+++ b/event/popl22/index.html
@@ -146,7 +146,7 @@ Jan 20, 2022 9:20 AM &mdash; 11:00 AM
 <div class="col-12 col-md-3 pub-row-heading">Event</div>
 <div class="col-12 col-md-9">
 <a href=https://popl22.sigplan.org/ target=_blank rel=noopener>
-49th ACM SIGPLAN Symposium on Principles of Programming Languages (POPL 2022).
+49th ACM SIGPLAN Symposium on Principles of Programming Languages (POPL 2022)
 </a>
 </div>
 </div>
