--- a/publication/index.html
+++ b/publication/index.html
@@ -308,6 +308,45 @@ arXiv
 </div>
 </div>
 </div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-0 year-2022">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Peng2022a/>A Formally Certified End-to-End Implementation of Shor's Factorization Algorithm</a>
+</div>
+<a href=/bib/publication/Peng2022a/ class=summary-link>
+<div class=article-style>
+Quantum computing technology may soon deliver revolutionary improvements in algorithmic performance, but these are only useful if …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Yuxiang-Peng/>Yuxiang Peng</a></span>, <span>
+<a href=/bib/author/Kesha-Hietala/>Kesha Hietala</a></span>, <span>
+<a href=/bib/author/Runzhou-Tao/>Runzhou Tao</a></span>, <span>
+<a href=/bib/author/Liyi-Li/>Liyi Li</a></span>, <span>
+<a href=/bib/author/Robert-Rand/>Robert Rand</a></span>, <span>
+<a href=/bib/author/Michael-Hicks/>Michael Hicks</a></span>, <span>
+<a href=/bib/author/Xiaodi-Wu/>Xiaodi Wu</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Peng2022a/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2204.07112 target=_blank rel=noopener>
+arXiv
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://github.com/inQWIRE/SQIR/tree/main/examples/shor target=_blank rel=noopener>
+URL
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
 <div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2022">
 <div class="media stream-item">
 <div class=media-body>
@@ -589,7 +628,7 @@ arXiv
 </div>
 <a href=/bib/publication/Unruh2021/ class=summary-link>
 <div class=article-style>
-We present a generic theory of "registers" in imperative programs and instantiate it in the classical and quantum setting. …
+We present a generic theory of &ldquo;registers&rdquo; in imperative programs and instantiate it in the classical and quantum setting. …
 </div>
 </a>
 <div class="stream-meta article-metadata">
