deploy: QuantumPL/site@b34de3bce24d7e5774ae35f044bc268945f6e868

--- a/publication/index.html
+++ b/publication/index.html
@@ -5196,7 +5196,7 @@ A few conventions for thinking about and writing quantum pseudocode are proposed
 <div class="stream-meta article-metadata">
 <div>
 <span>
-<a href=/bib/author/Emmanuel-Knill/>Emmanuel Knill</a></span>
+<a href=/bib/author/Emanuel-Knill/>Emanuel Knill</a></span>
 </div>
 </div>
 <div class=btn-links>
