deploy: QuantumPL/site@0345f3385f8fb730f0f382331ab28915630cc59b

--- a/publication-type/2/index.html
+++ b/publication-type/2/index.html
@@ -212,6 +212,12 @@ We present t$|$ket$\rangle$, a quantum software development platform produced by
 </div>
 </div>
 <div>
+<h2><a href=/bib/publication/Amy2020/>staq -- A full-stack quantum processing toolkit</a></h2>
+<div class=article-style>
+We describe staq, a full-stack quantum processing toolkit written in standard C++. staq is a quantum compiler toolkit, comprising of tools that range from quantum optimizers and translators to physical mappers for quantum devices with restricted …
+</div>
+</div>
+<div>
 <h2><a href=/bib/publication/Rennela2020/>Classical Control, Quantum Circuits and Linear Logic in Enriched Category Theory</a></h2>
 <div class=article-style>
 We describe categorical models of a circuit-based (quantum) functional programming language. We show that enriched categories play a crucial role. Following earlier work on QWire by Paykin et al., we consider both a simple first-order linear language …
@@ -251,6 +257,12 @@ This report documents the program and the outcomes of Dagstuhl Seminar 18381 "Qu
 <h2><a href=/bib/publication/Unruh2019/>Quantum Relational Hoare Logic</a></h2>
 <div class=article-style>
 We present a logic for reasoning about pairs of interactive quantum programs -- quantum relational Hoare logic (qRHL). This logic follows the spirit of probabilistic relational Hoare logic (Barthe et al. 2009) and allows us to formulate how the …
+</div>
+</div>
+<div>
+<h2><a href=/bib/publication/Gheorghiu2018/>Quantum++: A modern C++ quantum computing library</a></h2>
+<div class=article-style>
+Quantum++ is a modern general-purpose multi-threaded quantum computing library written in C++11 and composed solely of header files. The library is not restricted to qubit systems or specific quantum information processing tasks, being capable of …
 </div>
 </div>
 <div>
