--- a/publication/index.html
+++ b/publication/index.html
@@ -1876,6 +1876,43 @@ arXiv
 </div>
 </div>
 </div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2020">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Amy2020/>staq -- A full-stack quantum processing toolkit</a>
+</div>
+<a href=/bib/publication/Amy2020/ class=summary-link>
+<div class=article-style>
+We describe staq, a full-stack quantum processing toolkit written in standard C++. staq is a quantum compiler toolkit, comprising of …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Matthew-Amy/>Matthew Amy</a></span>, <span>
+<a href=/bib/author/Vlad-Gheorghiu/>Vlad Gheorghiu</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Amy2020/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1088/2058-9565/ab9359 target=_blank rel=noopener>
+DOI
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/1912.06070 target=_blank rel=noopener>
+arXiv
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://github.com/softwareQinc/staq target=_blank rel=noopener>
+URL
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
 <div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2020">
 <div class="media stream-item">
 <div class=media-body>
@@ -2685,6 +2722,39 @@ Cite
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.4230/OASIcs.PLATEAU.2018.4 target=_blank rel=noopener>
 DOI
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2018">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Gheorghiu2018/>Quantum++: A modern C++ quantum computing library</a>
+</div>
+<a href=/bib/publication/Gheorghiu2018/ class=summary-link>
+<div class=article-style>
+Quantum++ is a modern general-purpose multi-threaded quantum computing library written in C++11 and composed solely of header files. …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Vlad-Gheorghiu/>Vlad Gheorghiu</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Gheorghiu2018/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1371/journal.pone.0208073 target=_blank rel=noopener>
+DOI
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://github.com/softwareQinc/qpp target=_blank rel=noopener>
+URL
 </a>
 </div>
 </div>
