deploy: QuantumPL/site@90d0abb9c84bbfa75a9db5c22702f6845c93cff2

--- a/index.html
+++ b/index.html
@@ -232,6 +232,26 @@ arXiv
 <i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author">
 <span>
+<a href=/bib/author/Peng-Fu/>Peng Fu</a></span>, <span>
+<a href=/bib/author/Kohei-Kishida/>Kohei Kishida</a></span>, <span>
+<a href=/bib/author/Neil-J.-Ross/>Neil J. Ross</a></span>, <span>
+<a href=/bib/author/Peter-Selinger/>Peter Selinger</a></span>
+</span>
+(2022).
+<a href=/bib/publication/Fu2022/>Proto-Quipper with dynamic lifting</a>.
+<p>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Fu2022/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2204.13041 target=_blank rel=noopener>
+arXiv
+</a>
+</p>
+</div>
+<div class=pub-list-item style=margin-bottom:1rem>
+<i class="far fa-file-alt pub-icon" aria-hidden=true></i>
+<span class="article-metadata li-cite-author">
+<span>
 <a href=/bib/author/Mingkuan-Xu/>Mingkuan Xu</a></span>, <span>
 <a href=/bib/author/Zikun-Li/>Zikun Li</a></span>, <span>
 <a href=/bib/author/Oded-Padon/>Oded Padon</a></span>, <span>
@@ -256,27 +276,6 @@ arXiv
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://github.com/quantum-compiler/quartz target=_blank rel=noopener>
 URL
-</a>
-</p>
-</div>
-<div class=pub-list-item style=margin-bottom:1rem>
-<i class="far fa-file-alt pub-icon" aria-hidden=true></i>
-<span class="article-metadata li-cite-author">
-<span>
-<a href=/bib/author/David-Ittah/>David Ittah</a></span>, <span>
-<a href=/bib/author/Thomas-Haner/>Thomas Häner</a></span>, <span>
-<a href=/bib/author/Vadym-Kliuchnikov/>Vadym Kliuchnikov</a></span>, <span>
-<a href=/bib/author/Torsten-Hoefler/>Torsten Hoefler</a></span>
-</span>
-(2022).
-<a href=/bib/publication/Ittah2022/>QIRO: A Static Single Assignment-Based Quantum Program Representation for Optimization</a>.
-<em>ACM Transactions on Quantum Computing</em>.
-<p>
-<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Ittah2022/cite.bib>
-Cite
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/3491247 target=_blank rel=noopener>
-DOI
 </a>
 </p>
 </div>
@@ -374,14 +373,14 @@ So I decided to move the GitHub repo to its own organization and set up this Hug
 </div>
 <div class="col-12 col-lg-8">
 <div class=tag-cloud>
-<a href=/bib/tag/formal-verification/ style=font-size:.919550967184833rem>formal verification</a>
-<a href=/bib/tag/hoare-logic/ style=font-size:1.1708730965212661rem>hoare logic</a>
-<a href=/bib/tag/programming-languages/ style=font-size:1.2407992603552624rem>programming languages</a>
+<a href=/bib/tag/formal-verification/ style=font-size:.8130400772434547rem>formal verification</a>
+<a href=/bib/tag/hoare-logic/ style=font-size:1.089137594260914rem>hoare logic</a>
+<a href=/bib/tag/programming-languages/ style=font-size:1.1659570938413821rem>programming languages</a>
 <a href=/bib/tag/proto-quipper-m/ style=font-size:.7rem>proto-quipper-m</a>
-<a href=/bib/tag/quantum-computation/ style=font-size:1.3055407758892215rem>quantum computation</a>
-<a href=/bib/tag/quantum-computing/ style=font-size:1.9713544607691198rem>quantum computing</a>
-<a href=/bib/tag/quantum-programming/ style=font-size:1.1708730965212661rem>quantum programming</a>
-<a href=/bib/tag/quantum-programming-languages/ style=font-size:.919550967184833rem>quantum programming languages</a>
+<a href=/bib/tag/quantum-computation/ style=font-size:1.2370808414161332rem>quantum computation</a>
+<a href=/bib/tag/quantum-computing/ style=font-size:1.968530577565317rem>quantum computing</a>
+<a href=/bib/tag/quantum-programming/ style=font-size:1.089137594260914rem>quantum programming</a>
+<a href=/bib/tag/quantum-programming-languages/ style=font-size:.8130400772434547rem>quantum programming languages</a>
 </div>
 </div>
 </div>
