--- a/publication-type/0/index.html
+++ b/publication-type/0/index.html
@@ -122,9 +122,21 @@
 </div>
 <div class=universal-wrapper>
 <div>
+<h2><a href=/bib/publication/Fu2022a/>A biset-enriched categorical model for Proto-Quipper with dynamic lifting</a></h2>
+<div class=article-style>
+Quipper and Proto-Quipper are a family of quantum programming languages that, by their nature as circuit description languages, involve two runtimes: one at which the program generates a circuit and one at which the circuit is executed, normally with …
+</div>
+</div>
+<div>
 <h2><a href=/bib/publication/Peng2022a/>A Formally Certified End-to-End Implementation of Shor's Factorization Algorithm</a></h2>
 <div class=article-style>
 Quantum computing technology may soon deliver revolutionary improvements in algorithmic performance, but these are only useful if computed answers are correct. While hardware-level decoherence errors have garnered significant attention, a less …
+</div>
+</div>
+<div>
+<h2><a href=/bib/publication/Fu2022/>Proto-Quipper with dynamic lifting</a></h2>
+<div class=article-style>
+Quipper is a functional programming language for quantum computing. Proto-Quipper is a family of languages aiming to provide a formal foundation for Quipper. In this paper, we extend Proto-Quipper-M with a construct called dynamic lifting, which is …
 </div>
 </div>
 <div>
