--- a/publication/Fu2020/index.html
+++ b/publication/Fu2020/index.html
@@ -192,9 +192,9 @@ Conference paper
 <ul>
 <li><a href=/bib/publication/Fu2020a/>A Tutorial Introduction to Quantum Circuit Programming in Dependently Typed Proto-Quipper</a></li>
 <li><a href=/bib/publication/Rios2021/>On a Categorically Sound Quantum Programming Language for Circuit Description</a></li>
+<li><a href=/bib/publication/Fu2022/>Proto-Quipper with dynamic lifting</a></li>
 <li><a href=/bib/publication/Colledan2022/>On Dynamic Lifting and Effect Typing in Circuit Description Languages (Extended Version)</a></li>
 <li><a href=/bib/publication/Lee2021/>Concrete Categorical Model of a Quantum Circuit Description Language with Measurement</a></li>
-<li><a href=/bib/publication/Kornell2021/>Quantum CPOs</a></li>
 </ul>
 </div>
 </div>
