--- a/publication/Green2013/index.html
+++ b/publication/Green2013/index.html
@@ -189,10 +189,10 @@ Conference paper
 <h3>Related</h3>
 <ul>
 <li><a href=/bib/publication/Rios2021/>On a Categorically Sound Quantum Programming Language for Circuit Description</a></li>
+<li><a href=/bib/publication/Fu2022a/>A biset-enriched categorical model for Proto-Quipper with dynamic lifting</a></li>
+<li><a href=/bib/publication/Fu2022/>Proto-Quipper with dynamic lifting</a></li>
 <li><a href=/bib/publication/Valiron2015/>Programming the Quantum Future</a></li>
 <li><a href=/bib/publication/Ross2015/>Algebraic and Logical Methods in Quantum Computation</a></li>
-<li><a href=/bib/publication/Rios2018/>A Categorical Model for a Quantum Circuit Description Language (Extended Abstract)</a></li>
-<li><a href=/bib/publication/Mahmoud2019/>Formalization of Metatheory of the Quipper Quantum Programming Language in a Linear Logic</a></li>
 </ul>
 </div>
 </div>
