--- a/publication/Lee2021/index.html
+++ b/publication/Lee2021/index.html
@@ -189,9 +189,9 @@ Conference paper
 <ul>
 <li><a href=/bib/publication/Colledan2022/>On Dynamic Lifting and Effect Typing in Circuit Description Languages (Extended Version)</a></li>
 <li><a href=/bib/publication/Lindenhovius2018/>Enriching a Linear/Non-Linear Lambda Calculus: A Programming Language for String Diagrams</a></li>
+<li><a href=/bib/publication/Fu2022a/>A biset-enriched categorical model for Proto-Quipper with dynamic lifting</a></li>
+<li><a href=/bib/publication/Fu2022/>Proto-Quipper with dynamic lifting</a></li>
 <li><a href=/bib/publication/Kornell2021/>Quantum CPOs</a></li>
-<li><a href=/bib/publication/Rios2018/>A Categorical Model for a Quantum Circuit Description Language (Extended Abstract)</a></li>
-<li><a href=/bib/publication/Rios2021/>On a Categorically Sound Quantum Programming Language for Circuit Description</a></li>
 </ul>
 </div>
 </div>
