--- a/publication/Rios2018/index.html
+++ b/publication/Rios2018/index.html
@@ -181,11 +181,11 @@ Conference paper
 <div class="article-widget content-widget-hr">
 <h3>Related</h3>
 <ul>
+<li><a href=/bib/publication/Fu2022/>Proto-Quipper with dynamic lifting</a></li>
 <li><a href=/bib/publication/Rios2021/>On a Categorically Sound Quantum Programming Language for Circuit Description</a></li>
+<li><a href=/bib/publication/Fu2022a/>A biset-enriched categorical model for Proto-Quipper with dynamic lifting</a></li>
 <li><a href=/bib/publication/Colledan2022/>On Dynamic Lifting and Effect Typing in Circuit Description Languages (Extended Version)</a></li>
 <li><a href=/bib/publication/Lee2021/>Concrete Categorical Model of a Quantum Circuit Description Language with Measurement</a></li>
-<li><a href=/bib/publication/Kornell2021/>Quantum CPOs</a></li>
-<li><a href=/bib/publication/Valiron2015/>Programming the Quantum Future</a></li>
 </ul>
 </div>
 </div>
