--- a/publication/index.html
+++ b/publication/index.html
@@ -236,6 +236,39 @@ URL
 </div>
 </div>
 </div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-0 year-2022">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Fu2022/>Proto-Quipper with dynamic lifting</a>
+</div>
+<a href=/bib/publication/Fu2022/ class=summary-link>
+<div class=article-style>
+Quipper is a functional programming language for quantum computing. Proto-Quipper is a family of languages aiming to provide a formal …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Peng-Fu/>Peng Fu</a></span>, <span>
+<a href=/bib/author/Kohei-Kishida/>Kohei Kishida</a></span>, <span>
+<a href=/bib/author/Neil-J.-Ross/>Neil J. Ross</a></span>, <span>
+<a href=/bib/author/Peter-Selinger/>Peter Selinger</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Fu2022/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2204.13041 target=_blank rel=noopener>
+arXiv
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
 <div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2022">
 <div class="media stream-item">
 <div class=media-body>
@@ -340,6 +373,39 @@ arXiv
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://github.com/inQWIRE/SQIR/tree/main/examples/shor target=_blank rel=noopener>
 URL
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-0 year-2022">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Fu2022a/>A biset-enriched categorical model for Proto-Quipper with dynamic lifting</a>
+</div>
+<a href=/bib/publication/Fu2022a/ class=summary-link>
+<div class=article-style>
+Quipper and Proto-Quipper are a family of quantum programming languages that, by their nature as circuit description languages, involve …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Peng-Fu/>Peng Fu</a></span>, <span>
+<a href=/bib/author/Kohei-Kishida/>Kohei Kishida</a></span>, <span>
+<a href=/bib/author/Neil-J.-Ross/>Neil J. Ross</a></span>, <span>
+<a href=/bib/author/Peter-Selinger/>Peter Selinger</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Fu2022a/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2204.13039 target=_blank rel=noopener>
+arXiv
 </a>
 </div>
 </div>
