--- a/404.html
+++ b/404.html
@@ -128,11 +128,11 @@
 <li><a href=/bib/event/pldi22/>Quantum at PLDI 2022</a></li>
 <li><a href=/bib/publication/Xu2022/>Quartz: Superoptimization of Quantum Circuits</a></li>
 <li><a href=/bib/publication/>Publications</a></li>
+<li><a href=/bib/publication/Fu2022/>Proto-Quipper with dynamic lifting</a></li>
 <li><a href=/bib/publication/Tao2022/>Giallar: Push-button Verification for the Qiskit Quantum Compiler</a></li>
 <li><a href=/bib/publication/Peng2022/>Algebraic Reasoning of Quantum Programs via Non-Idempotent Kleene Algebra</a></li>
 <li><a href=/bib/publication/Peng2022a/>A Formally Certified End-to-End Implementation of Shor's Factorization Algorithm</a></li>
-<li><a href=/bib/publication/Ittah2022/>QIRO: A Static Single Assignment-Based Quantum Program Representation for Optimization</a></li>
-<li><a href=/bib/publication/Colledan2022/>On Dynamic Lifting and Effect Typing in Circuit Description Languages (Extended Version)</a></li>
+<li><a href=/bib/publication/Fu2022a/>A biset-enriched categorical model for Proto-Quipper with dynamic lifting</a></li>
 </ul>
 </div>
 </div>
