--- a/publication/Colledan2022/index.html
+++ b/publication/Colledan2022/index.html
@@ -157,10 +157,10 @@ arXiv
 <h3>Related</h3>
 <ul>
 <li><a href=/bib/publication/Lee2021/>Concrete Categorical Model of a Quantum Circuit Description Language with Measurement</a></li>
+<li><a href=/bib/publication/Fu2022/>Proto-Quipper with dynamic lifting</a></li>
 <li><a href=/bib/publication/Kornell2021/>Quantum CPOs</a></li>
 <li><a href=/bib/publication/Rios2018/>A Categorical Model for a Quantum Circuit Description Language (Extended Abstract)</a></li>
 <li><a href=/bib/publication/Rios2021/>On a Categorically Sound Quantum Programming Language for Circuit Description</a></li>
-<li><a href=/bib/publication/Fu2020/>Linear Dependent Type Theory for Quantum Programming Languages: Extended Abstract</a></li>
 </ul>
 </div>
 </div>
