--- a/publication/Ross2015/index.html
+++ b/publication/Ross2015/index.html
@@ -163,17 +163,18 @@ Thesis
 <div class=space-below></div>
 <div class=article-style></div>
 <div class=article-tags>
+<a class="badge badge-light" href=/bib/tag/proto-quipper-s/>proto-quipper-s</a>
 <a class="badge badge-light" href=/bib/tag/proto-quipper/>proto-quipper</a>
 <a class="badge badge-light" href=/bib/tag/quipper/>quipper</a>
 </div>
 <div class="article-widget content-widget-hr">
 <h3>Related</h3>
 <ul>
+<li><a href=/bib/publication/Fu2022a/>A biset-enriched categorical model for Proto-Quipper with dynamic lifting</a></li>
+<li><a href=/bib/publication/Fu2022/>Proto-Quipper with dynamic lifting</a></li>
 <li><a href=/bib/publication/Rios2021/>On a Categorically Sound Quantum Programming Language for Circuit Description</a></li>
 <li><a href=/bib/publication/Valiron2015/>Programming the Quantum Future</a></li>
 <li><a href=/bib/publication/Rios2018/>A Categorical Model for a Quantum Circuit Description Language (Extended Abstract)</a></li>
-<li><a href=/bib/publication/Mahmoud2019/>Formalization of Metatheory of the Quipper Quantum Programming Language in a Linear Logic</a></li>
-<li><a href=/bib/publication/Green2013a/>An Introduction to Quantum Programming in Quipper</a></li>
 </ul>
 </div>
 </div>
