deploy: QuantumPL/site@52db62472e606790c69c6c0eb93c43a6f2984f2c

--- a/index.html
+++ b/index.html
@@ -158,6 +158,37 @@ Quickly discover relevant papers by <a href=./publication/>filtering publication
 <i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author">
 <span>
+<a href=/bib/author/Mingkuan-Xu/>Mingkuan Xu</a></span>, <span>
+<a href=/bib/author/Zikun-Li/>Zikun Li</a></span>, <span>
+<a href=/bib/author/Oded-Padon/>Oded Padon</a></span>, <span>
+<a href=/bib/author/Sina-Lin/>Sina Lin</a></span>, <span>
+<a href=/bib/author/Jessica-Pointing/>Jessica Pointing</a></span>, <span>
+<a href=/bib/author/Auguste-Hirth/>Auguste Hirth</a></span>, <span>
+<a href=/bib/author/Henry-Ma/>Henry Ma</a></span>, <span>
+<a href=/bib/author/Jens-Palsberg/>Jens Palsberg</a></span>, <span>
+<a href=/bib/author/Alex-Aiken/>Alex Aiken</a></span>, <span>
+<a href=/bib/author/Umut-A.-Acar/>Umut A. Acar</a></span>, <span>
+<a href=/bib/author/Zhihao-Jia/>Zhihao Jia</a></span>
+</span>
+(2022).
+<a href=/bib/publication/Xu2022/>Quartz: Superoptimization of Quantum Circuits</a>.
+<em>Proceedings of the 43rd ACM SIGPLAN International Conference on Programming Language Design and Implementation</em>.
+<p>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Xu2022/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2111.11387 target=_blank rel=noopener>
+arXiv
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://github.com/quantum-compiler/quartz target=_blank rel=noopener>
+URL
+</a>
+</p>
+</div>
+<div class=pub-list-item style=margin-bottom:1rem>
+<i class="far fa-file-alt pub-icon" aria-hidden=true></i>
+<span class="article-metadata li-cite-author">
+<span>
 <a href=/bib/author/Yuxiang-Peng/>Yuxiang Peng</a></span>, <span>
 <a href=/bib/author/Kesha-Hietala/>Kesha Hietala</a></span>, <span>
 <a href=/bib/author/Runzhou-Tao/>Runzhou Tao</a></span>, <span>
@@ -232,50 +263,19 @@ arXiv
 <i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author">
 <span>
-<a href=/bib/author/Peng-Fu/>Peng Fu</a></span>, <span>
-<a href=/bib/author/Kohei-Kishida/>Kohei Kishida</a></span>, <span>
-<a href=/bib/author/Neil-J.-Ross/>Neil J. Ross</a></span>, <span>
-<a href=/bib/author/Peter-Selinger/>Peter Selinger</a></span>
+<a href=/bib/author/Peng-Yan/>Peng Yan</a></span>, <span>
+<a href=/bib/author/Hanru-Jiang/>Hanru Jiang</a></span>, <span>
+<a href=/bib/author/Nengkun-Yu/>Nengkun Yu</a></span>
 </span>
 (2022).
-<a href=/bib/publication/Fu2022/>Proto-Quipper with dynamic lifting</a>.
+<a href=/bib/publication/Yan2022/>On Incorrectness Logic for Quantum Programs</a>.
+<em>Proceedings of the ACM on Programming Languages</em>.
 <p>
-<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Fu2022/cite.bib>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Yan2022/cite.bib>
 Cite
 </a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2204.13041 target=_blank rel=noopener>
-arXiv
-</a>
-</p>
-</div>
-<div class=pub-list-item style=margin-bottom:1rem>
-<i class="far fa-file-alt pub-icon" aria-hidden=true></i>
-<span class="article-metadata li-cite-author">
-<span>
-<a href=/bib/author/Mingkuan-Xu/>Mingkuan Xu</a></span>, <span>
-<a href=/bib/author/Zikun-Li/>Zikun Li</a></span>, <span>
-<a href=/bib/author/Oded-Padon/>Oded Padon</a></span>, <span>
-<a href=/bib/author/Sina-Lin/>Sina Lin</a></span>, <span>
-<a href=/bib/author/Jessica-Pointing/>Jessica Pointing</a></span>, <span>
-<a href=/bib/author/Auguste-Hirth/>Auguste Hirth</a></span>, <span>
-<a href=/bib/author/Henry-Ma/>Henry Ma</a></span>, <span>
-<a href=/bib/author/Jens-Palsberg/>Jens Palsberg</a></span>, <span>
-<a href=/bib/author/Alex-Aiken/>Alex Aiken</a></span>, <span>
-<a href=/bib/author/Umut-A.-Acar/>Umut A. Acar</a></span>, <span>
-<a href=/bib/author/Zhihao-Jia/>Zhihao Jia</a></span>
-</span>
-(2022).
-<a href=/bib/publication/Xu2022/>Quartz: Superoptimization of Quantum Circuits</a>.
-<em>Proceedings of the 43rd ACM SIGPLAN International Conference on Programming Language Design and Implementation</em>.
-<p>
-<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Xu2022/cite.bib>
-Cite
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2111.11387 target=_blank rel=noopener>
-arXiv
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://github.com/quantum-compiler/quartz target=_blank rel=noopener>
-URL
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/3527316 target=_blank rel=noopener>
+DOI
 </a>
 </p>
 </div>
@@ -380,7 +380,7 @@ So I decided to move the GitHub repo to its own organization and set up this Hug
 <a href=/bib/tag/quantum-computation/ style=font-size:1.2370808414161332rem>quantum computation</a>
 <a href=/bib/tag/quantum-computing/ style=font-size:1.968530577565317rem>quantum computing</a>
 <a href=/bib/tag/quantum-programming/ style=font-size:1.089137594260914rem>quantum programming</a>
-<a href=/bib/tag/quantum-programming-languages/ style=font-size:.8130400772434547rem>quantum programming languages</a>
+<a href=/bib/tag/quantum-programming-languages/ style=font-size:.9141578720260296rem>quantum programming languages</a>
 </div>
 </div>
 </div>
