--- a/publication/Fu2020a/index.html
+++ b/publication/Fu2020a/index.html
@@ -191,7 +191,7 @@ Conference paper
 <li><a href=/bib/publication/Mahmoud2019/>Formalization of Metatheory of the Quipper Quantum Programming Language in a Linear Logic</a></li>
 <li><a href=/bib/publication/Rios2021/>On a Categorically Sound Quantum Programming Language for Circuit Description</a></li>
 <li><a href=/bib/publication/Green2013/>Quipper: A Scalable Quantum Programming Language</a></li>
-<li><a href=/bib/publication/Paolini2017/>qPCF: A Language for Quantum Circuit Computations</a></li>
+<li><a href=/bib/publication/Yan2022/>On Incorrectness Logic for Quantum Programs</a></li>
 </ul>
 </div>
 </div>
