--- a/publication/index.html
+++ b/publication/index.html
@@ -269,6 +269,38 @@ arXiv
 </div>
 </div>
 </div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2022">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Yan2022/>On Incorrectness Logic for Quantum Programs</a>
+</div>
+<a href=/bib/publication/Yan2022/ class=summary-link>
+<div class=article-style>
+Bug-catching is important for developing quantum programs. Motivated by the incorrectness logic for classical programs, we propose an …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Peng-Yan/>Peng Yan</a></span>, <span>
+<a href=/bib/author/Hanru-Jiang/>Hanru Jiang</a></span>, <span>
+<a href=/bib/author/Nengkun-Yu/>Nengkun Yu</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Yan2022/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/3527316 target=_blank rel=noopener>
+DOI
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
 <div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2022">
 <div class="media stream-item">
 <div class=media-body>
