--- a/index.html
+++ b/index.html
@@ -174,14 +174,60 @@ Quickly discover relevant papers by <a href=./publication/>filtering publication
 <a href=/bib/publication/Xu2022/>Quartz: Superoptimization of Quantum Circuits</a>.
 <em>Proceedings of the 43rd ACM SIGPLAN International Conference on Programming Language Design and Implementation</em>.
 <p>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://theory.stanford.edu/~aiken/publications/papers/pldi22b.pdf target=_blank rel=noopener>
+PDF
+</a>
 <a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Xu2022/cite.bib>
 Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/3519939.3523433 target=_blank rel=noopener>
+DOI
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2111.11387 target=_blank rel=noopener>
 arXiv
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://github.com/quantum-compiler/quartz target=_blank rel=noopener>
 URL
+</a>
+</p>
+</div>
+<div class=pub-list-item style=margin-bottom:1rem>
+<i class="far fa-file-alt pub-icon" aria-hidden=true></i>
+<span class="article-metadata li-cite-author">
+<span>
+<a href=/bib/author/Peng-Fu/>Peng Fu</a></span>, <span>
+<a href=/bib/author/Kohei-Kishida/>Kohei Kishida</a></span>, <span>
+<a href=/bib/author/Neil-J.-Ross/>Neil J. Ross</a></span>, <span>
+<a href=/bib/author/Peter-Selinger/>Peter Selinger</a></span>
+</span>
+(2022).
+<a href=/bib/publication/Fu2022/>Proto-Quipper with dynamic lifting</a>.
+<p>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Fu2022/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2204.13041 target=_blank rel=noopener>
+arXiv
+</a>
+</p>
+</div>
+<div class=pub-list-item style=margin-bottom:1rem>
+<i class="far fa-file-alt pub-icon" aria-hidden=true></i>
+<span class="article-metadata li-cite-author">
+<span>
+<a href=/bib/author/Peng-Fu/>Peng Fu</a></span>, <span>
+<a href=/bib/author/Kohei-Kishida/>Kohei Kishida</a></span>, <span>
+<a href=/bib/author/Neil-J.-Ross/>Neil J. Ross</a></span>, <span>
+<a href=/bib/author/Peter-Selinger/>Peter Selinger</a></span>
+</span>
+(2022).
+<a href=/bib/publication/Fu2022a/>A biset-enriched categorical model for Proto-Quipper with dynamic lifting</a>.
+<p>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Fu2022a/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2204.13039 target=_blank rel=noopener>
+arXiv
 </a>
 </p>
 </div>
@@ -215,29 +261,6 @@ URL
 <i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author">
 <span>
-<a href=/bib/author/Yuxiang-Peng/>Yuxiang Peng</a></span>, <span>
-<a href=/bib/author/Mingsheng-Ying/>Mingsheng Ying</a></span>, <span>
-<a href=/bib/author/Xiaodi-Wu/>Xiaodi Wu</a></span>
-</span>
-(2022).
-<a href=/bib/publication/Peng2022/>Algebraic Reasoning of Quantum Programs via Non-Idempotent Kleene Algebra</a>.
-<em>Proceedings of the 43rd ACM SIGPLAN International Conference on Programming Language Design and Implementation</em>.
-<p>
-<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Peng2022/cite.bib>
-Cite
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/3519939.3523713 target=_blank rel=noopener>
-DOI
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2110.07018 target=_blank rel=noopener>
-arXiv
-</a>
-</p>
-</div>
-<div class=pub-list-item style=margin-bottom:1rem>
-<i class="far fa-file-alt pub-icon" aria-hidden=true></i>
-<span class="article-metadata li-cite-author">
-<span>
 <a href=/bib/author/Runzhou-Tao/>Runzhou Tao</a></span>, <span>
 <a href=/bib/author/Yunong-Shi/>Yunong Shi</a></span>, <span>
 <a href=/bib/author/Jianan-Yao/>Jianan Yao</a></span>, <span>
@@ -256,26 +279,6 @@ Cite
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/1908.08963 target=_blank rel=noopener>
 arXiv
-</a>
-</p>
-</div>
-<div class=pub-list-item style=margin-bottom:1rem>
-<i class="far fa-file-alt pub-icon" aria-hidden=true></i>
-<span class="article-metadata li-cite-author">
-<span>
-<a href=/bib/author/Peng-Yan/>Peng Yan</a></span>, <span>
-<a href=/bib/author/Hanru-Jiang/>Hanru Jiang</a></span>, <span>
-<a href=/bib/author/Nengkun-Yu/>Nengkun Yu</a></span>
-</span>
-(2022).
-<a href=/bib/publication/Yan2022/>On Incorrectness Logic for Quantum Programs</a>.
-<em>Proceedings of the ACM on Programming Languages</em>.
-<p>
-<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Yan2022/cite.bib>
-Cite
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/3527316 target=_blank rel=noopener>
-DOI
 </a>
 </p>
 </div>
